--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -2299,6 +2299,10 @@ td.datePickerMonth {
   border-top: 2px solid;
 }
 
+.border-top-6-synapse-blue {
+	border-top: 6px $synapse-blue;
+}
+
 .read-only-box {
 	padding: 5px;
     border: 1px solid #dddddd;
