--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -9,44 +9,41 @@
 	<g:HTMLPanel>
 		<div class="separator margin-top-3"></div>
 		<div class="margin-top-left-10 margin-right-15">
-			<b:Row>
-				<b:Column size="MD_9">
-					<bh:Div ui:field="teamBadgeContainer"/>
-					<bh:Span marginLeft="85"><w:TextBoxWithCopyToClipboardWidget ui:field="synapseEmailField"/></bh:Span>
-				</b:Column>	
-				<b:Column ui:field="commandsContainer" size="MD_3">
-					<b:ButtonToolBar addStyleNames="pull-right">
-						<b:ButtonGroup>
-							<b:Button dataToggle="DROPDOWN" text="Tools" icon="COG"/>
-							<b:DropDownMenu addStyleNames="dropdown-menu-right">
-								<b:AnchorListItem icon="PLUS_SQUARE_O" iconFixedWidth="true" ui:field="inviteMemberItem" visible="false" text="Invite User" />
-								<b:AnchorListItem icon="EDIT" iconFixedWidth="true" ui:field="editTeamItem" visible="false" text="Edit Team" />
-								<b:AnchorListItem icon="TIMES_CIRCLE" iconFixedWidth="true" ui:field="deleteTeamItem" visible="false" text="Delete Team" />
-								<b:AnchorListItem icon="ARROW_RIGHT" iconFixedWidth="true" ui:field="leaveTeamItem" visible="false" text="Leave Team" />
-								<b:AnchorListItem icon="FLAG" iconFixedWidth="true" ui:field="manageAccessItem" text="(ACT) Manage Access Requirements" visible="false"/> 
-							</b:DropDownMenu>
-						</b:ButtonGroup>
-					</b:ButtonToolBar>
-					<w:HelpWidget helpMarkdown="Teams are a way to easily manage groups of users for the purposes of project access, communication, and challenge participation." 
-						href="http://docs.synapse.org/articles/teams.html" iconStyles="lightGreyText movedown-6 font-size-18" addStyleNames="margin-right-10" pull="RIGHT" placement="LEFT" />
-					<g:SimplePanel ui:field="teamEditPanel"/>
-					<g:SimplePanel ui:field="teamDeletePanel"/>
-					<g:SimplePanel ui:field="teamLeavePanel"/>
-					<g:SimplePanel ui:field="inviteMemberPanel"/>
-				</b:Column>
-					
-			</b:Row>
+			<bh:Div addStyleNames="border-top-6-synapse-blue border-left-1 border-right-1 border-bottom-1">
+				<b:Row>
+					<b:Column size="MD_9">
+						<bh:Div ui:field="teamBadgeContainer"/>
+					</b:Column>	
+					<b:Column ui:field="commandsContainer" size="MD_3">
+						<b:ButtonToolBar addStyleNames="pull-right margin-top-15 margin-right-10 margin-bottom-10">
+							<b:ButtonGroup>
+								<b:Button dataToggle="DROPDOWN" text="Tools" icon="COG"/>
+								<b:DropDownMenu addStyleNames="dropdown-menu-right">
+									<b:AnchorListItem icon="PLUS_SQUARE_O" iconFixedWidth="true" ui:field="inviteMemberItem" visible="false" text="Invite User" />
+									<b:AnchorListItem icon="EDIT" iconFixedWidth="true" ui:field="editTeamItem" visible="false" text="Edit Team" />
+									<b:AnchorListItem icon="TIMES_CIRCLE" iconFixedWidth="true" ui:field="deleteTeamItem" visible="false" text="Delete Team" />
+									<b:AnchorListItem icon="ARROW_RIGHT" iconFixedWidth="true" ui:field="leaveTeamItem" visible="false" text="Leave Team" />
+									<b:AnchorListItem icon="FLAG" iconFixedWidth="true" ui:field="manageAccessItem" text="(ACT) Manage Access Requirements" visible="false"/> 
+								</b:DropDownMenu>
+							</b:ButtonGroup>
+						</b:ButtonToolBar>
+						<w:HelpWidget helpMarkdown="Teams are a way to easily manage groups of users for the purposes of project access, communication, and challenge participation." 
+							href="http://docs.synapse.org/articles/teams.html" iconStyles="lightGreyText movedown-6 font-size-18" addStyleNames="margin-right-10 margin-top-15 margin-bottom-10" pull="RIGHT" placement="LEFT" />
+						<g:SimplePanel ui:field="teamEditPanel"/>
+						<g:SimplePanel ui:field="teamDeletePanel"/>
+						<g:SimplePanel ui:field="teamLeavePanel"/>
+						<g:SimplePanel ui:field="inviteMemberPanel"/>
+					</b:Column>
+				</b:Row>
+			</bh:Div>
+
 			<g:SimplePanel ui:field="synAlertPanel"/>
 			<div class="row">
 				<g:HTMLPanel ui:field="mainContainer" styleName="col-md-12">
-					<bh:Span ui:field="publicJoinField" visible="false" addStyleNames="boldText margin-right-5" text="Can be joined without team manager authorization " />
-					<b:Anchor ui:field="showMapLink" text="Show map" icon="MAP_MARKER" visible="false"/>
-					<bh:Div>
-						<bh:Paragraph>
-							<bh:Text>Member count: </bh:Text>
-							<bh:Span ui:field="memberCountContainer"/>
-						</bh:Paragraph>
+					<bh:Div ui:field="publicJoinField" visible="false" >
+						<bh:Italic>Can be joined without team manager authorization </bh:Italic>
 					</bh:Div>
+					<b:Anchor ui:field="showMapLink" text="Show map" icon="MAP_MARKER" visible="false"/>
 					<b:Modal ui:field="mapModal" closable="true" dataBackdrop="STATIC" dataKeyboard="true" addStyleNames="modal-fullscreen" >
 						<b:ModalBody>
 							<bh:Div ui:field="mapPanel"/>
@@ -56,7 +53,7 @@
 								dataDismiss="MODAL">Ok</b:Button>
 						</b:ModalFooter>
 					</b:Modal>
-					<g:SimplePanel ui:field="joinTeamPanel" addStyleNames="margin-bottom-5"/>
+					<g:SimplePanel ui:field="joinTeamPanel" addStyleNames="margin-bottom-5 margin-top-10"/>
 					<g:SimplePanel ui:field="openMembershipRequestsPanel" addStyleNames="margin-bottom-5"/>
 					<g:SimplePanel ui:field="openUserInvitationsPanel" addStyleNames="margin-bottom-5"/>
 					<bh:Div pull="RIGHT" marginTop="10" marginBottom="5" width="445px">
