--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -1761,6 +1761,10 @@ ol.lowerroman {
 	position: relative;
 	left: 5px;
 }
+.moveright-40 {
+	position: relative;
+	left: 40px;
+}
 
 .highlight-box {
     position: relative;
