--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -1938,7 +1938,7 @@ ol.lowerroman {
 .padding-left-15 {
 	padding-left: 15px;
 }
-.padding-left-30 {
+.padding-left-30, #body .padding-left-30 {
 	padding-left: 30px;
 }
 
