--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -9,13 +9,13 @@
 	<g:HTMLPanel>
 		<div class="separator margin-top-3"></div>
 		<div class="margin-top-left-10 margin-right-15">
-			<bh:Div addStyleNames="border-top-6-synapse-blue border-left-1 border-right-1 border-bottom-1">
-				<b:Row>
-					<b:Column size="MD_9">
-						<bh:Div ui:field="teamBadgeContainer"/>
-					</b:Column>	
-					<b:Column ui:field="commandsContainer" size="MD_3">
-						<b:ButtonToolBar addStyleNames="pull-right margin-top-15 margin-right-10 margin-bottom-10">
+			<bh:Div addStyleNames="border-top-6-synapse-blue border-left-1 border-right-1 border-bottom-1 flexcontainer-row">
+				<bh:Div addStyleNames="flexcontainer-column flexcontainer-column-fill-width">
+					<bh:Div ui:field="teamBadgeContainer"/>
+				</bh:Div>
+				<bh:Div ui:field="commandsContainer" addStyleNames="flexcontainer-column flexcontainer-align-items-flex-end">
+					<bh:Div>
+						<b:ButtonToolBar addStyleNames="margin-top-15 margin-right-10 margin-bottom-10 right">
 							<b:ButtonGroup>
 								<b:Button dataToggle="DROPDOWN" text="Tools" icon="COG"/>
 								<b:DropDownMenu addStyleNames="dropdown-menu-right">
@@ -29,13 +29,13 @@
 						</b:ButtonToolBar>
 						<w:HelpWidget helpMarkdown="Teams are a way to easily manage groups of users for the purposes of project access, communication, and challenge participation." 
 							href="http://docs.synapse.org/articles/teams.html" iconStyles="lightGreyText movedown-6 font-size-18" addStyleNames="margin-right-10 margin-top-15 margin-bottom-10" pull="RIGHT" placement="LEFT" />
-						<g:SimplePanel ui:field="teamEditPanel"/>
-						<g:SimplePanel ui:field="teamDeletePanel"/>
-						<g:SimplePanel ui:field="teamLeavePanel"/>
-						<g:SimplePanel ui:field="inviteMemberPanel"/>
-					</b:Column>
-				</b:Row>
+					</bh:Div>
+				</bh:Div>
 			</bh:Div>
+			<g:SimplePanel ui:field="teamEditPanel"/>
+			<g:SimplePanel ui:field="teamDeletePanel"/>
+			<g:SimplePanel ui:field="teamLeavePanel"/>
+			<g:SimplePanel ui:field="inviteMemberPanel"/>
 
 			<g:SimplePanel ui:field="synAlertPanel"/>
 			<div class="row">
@@ -65,7 +65,7 @@
 						<bh:Div addStyleNames="flexcontainer-column flexcontainer-column-fill-width flexcontainer-align-items-flex-end" marginTop="10" marginBottom="5">
 							<bh:Div>
 								<b:Icon ui:field="memberSearchButton" type="SEARCH" addStyleNames="imageButton topLevelZIndex font-size-22 moveright-32 movedown-3 synapse-green"/>
-								<b:TextBox ui:field="memberSearchTextBox" height="35px" width="300px" addStyleNames="inline-block" placeholder="         Find team members"/>
+								<b:TextBox ui:field="memberSearchTextBox" height="35px" width="300px" addStyleNames="inline-block padding-left-35" placeholder="Find team members"/>
 							</bh:Div>
 						</bh:Div>
 					</bh:Div>
