--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -1941,7 +1941,9 @@ ol.lowerroman {
 .padding-left-30, #body .padding-left-30 {
 	padding-left: 30px;
 }
-
+.padding-left-35, #body .padding-left-35 {
+	padding-left: 35px;
+}
 .padding-left-74 {
 	padding-left:74px;
 }
