--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamSearchViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamSearchViewImpl.ui.xml
@@ -1,26 +1,22 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
-	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:c="urn:import:com.google.gwt.user.cellview.client"
-	xmlns:s="urn:import:org.sagebionetworks.web.client.view"
-	xmlns:b="urn:import:org.gwtbootstrap3.client.ui">
-	<g:HTMLPanel>
-		<div class="col-md-12 margin-top-15 margin-bottom-40"><h3>Search Teams</h3></div>
-		<b:Container addStyleNames="margin-top-15">
-		    <b:Row>
-				<b:InputGroup>
-				    <b:TextBox ui:field="searchField" addStyleNames="input-lg search-textbox"/>
-				    <b:InputGroupButton>
-				        <b:Button ui:field="searchButton" icon="SEARCH" addStyleNames="btn-lg">Search</b:Button>
-				    </b:InputGroupButton>
-				</b:InputGroup>
-			</b:Row>
-			<b:Row>
-			    <g:SimplePanel ui:field="synAlertPanel"/>
-	       		<g:FlowPanel ui:field="mainContainer" addStyleNames="margin-top-10"/>
-	       	</b:Row>
-	       	<b:Row>
-				<g:SimplePanel ui:field="paginationPanel"/>
-			</b:Row>
-        </b:Container>
-	</g:HTMLPanel>
+	xmlns:g="urn:import:com.google.gwt.user.client.ui" 
+	xmlns:b="urn:import:org.gwtbootstrap3.client.ui"
+	xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html">
+	<bh:Div>
+		<bh:Div addStyleNames="flexcontainer-row margin-top-20">
+			<bh:Div addStyleNames="flexcontainer-column" marginLeft="15" marginBottom="5">
+				<b:Heading size="H3" text="Teams"/>
+			</bh:Div>
+			<bh:Div addStyleNames="flexcontainer-column flexcontainer-column-fill-width flexcontainer-align-items-flex-end" marginTop="10" marginBottom="5" marginRight="15">
+				<bh:Div>
+					<b:Icon ui:field="searchButton" type="SEARCH" addStyleNames="imageButton topLevelZIndex font-size-22 moveright-32 movedown-3 synapse-green"/>
+					<b:TextBox ui:field="searchField" height="35px" width="300px" addStyleNames="inline-block padding-left-35" placeholder="Find teams"/>
+				</bh:Div>
+			</bh:Div>
+		</bh:Div>
+		<g:SimplePanel ui:field="synAlertPanel"/>
+		<g:FlowPanel ui:field="mainContainer" addStyleNames="margin-top-10"/>
+		<g:SimplePanel ui:field="paginationPanel"/>
+	</bh:Div>
 </ui:UiBinder> 
