--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -1757,15 +1757,14 @@ ol.lowerroman {
 	position: relative;
 	top: 10px;
 }
+.movedown-28 {
+	position: relative;
+	top: 28px;
+}
 .moveright-5 {
 	position: relative;
 	left: 5px;
 }
-.moveright-32 {
-	position: relative;
-	left: 32px;
-}
-
 .highlight-box {
     position: relative;
     margin-top: 15px;
