--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -56,14 +56,15 @@
 					<g:SimplePanel ui:field="joinTeamPanel" addStyleNames="margin-bottom-5 margin-top-10"/>
 					<g:SimplePanel ui:field="openMembershipRequestsPanel" addStyleNames="margin-bottom-5 margin-top-60"/>
 					<g:SimplePanel ui:field="openUserInvitationsPanel" addStyleNames="margin-bottom-5 margin-top-60"/>
-					<bh:Div addStyleNames="flexcontainer-row margin-top-60">
-						<bh:Div addStyleNames="flexcontainer-column" marginBottom="5">
+					<bh:Div addStyleNames="SRC-card-grid-row margin-top-60">
+						<bh:Div addStyleNames="SRC-grid-item" marginBottom="5" height="40px">
 							<b:Heading size="H4" text="Members"/>
 						</bh:Div>
-						<bh:Div addStyleNames="flexcontainer-column flexcontainer-column-fill-width flexcontainer-align-items-flex-end" marginTop="10" marginBottom="5">
+						<bh:Div addStyleNames="SRC-grid-item" height="10px"/>
+						<bh:Div addStyleNames="SRC-grid-item flexcontainer-align-items-flex-end" marginTop="10" marginBottom="5" height="50px">
 							<bh:Div>
-								<b:Icon ui:field="memberSearchButton" type="SEARCH" addStyleNames="imageButton topLevelZIndex font-size-22 moveright-32 movedown-3 synapse-green"/>
-								<b:TextBox ui:field="memberSearchTextBox" height="35px" width="300px" addStyleNames="inline-block padding-left-35" placeholder="Find team members"/>
+								<b:Icon ui:field="memberSearchButton" type="SEARCH" addStyleNames="imageButton topLevelZIndex font-size-22 movedown-28 synapse-green left"/>
+								<b:TextBox ui:field="memberSearchTextBox" height="35px" width="100%" addStyleNames="inline-block padding-left-35" placeholder="Find team members"/>
 							</bh:Div>
 						</bh:Div>
 					</bh:Div>
