--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -8,8 +8,9 @@
 
 	<g:HTMLPanel>
 		<div class="separator margin-top-3"></div>
-		<div class="margin-top-left-10 margin-right-15">
-			<bh:Div addStyleNames="border-top-6-synapse-blue border-left-1 border-right-1 border-bottom-1 flexcontainer-row">
+		<div class="margin-top-20 margin-right-20 margin-left-20">
+			<b:Heading size="H3" ui:field="teamNameHeading"/>
+			<bh:Div addStyleNames="border-top-6-synapse-blue border-left-1 border-right-1 border-bottom-1 flexcontainer-row" marginTop="35">
 				<bh:Div addStyleNames="flexcontainer-column flexcontainer-column-fill-width">
 					<bh:Div ui:field="teamBadgeContainer"/>
 				</bh:Div>
@@ -40,7 +41,7 @@
 			<g:SimplePanel ui:field="synAlertPanel"/>
 			<div class="row">
 				<g:HTMLPanel ui:field="mainContainer" styleName="col-md-12">
-					<bh:Div ui:field="publicJoinField" visible="false" >
+					<bh:Div ui:field="publicJoinField" visible="false" marginTop="10" >
 						<bh:Italic>Can be joined without team manager authorization </bh:Italic>
 					</bh:Div>
 					<b:Anchor ui:field="showMapLink" text="Show map" icon="MAP_MARKER" visible="false"/>
@@ -58,7 +59,7 @@
 					<g:SimplePanel ui:field="openUserInvitationsPanel" addStyleNames="margin-bottom-5 margin-top-60"/>
 					<bh:Div addStyleNames="SRC-card-grid-row margin-top-60">
 						<bh:Div addStyleNames="SRC-grid-item" marginBottom="5" height="40px">
-							<b:Heading size="H4" text="Members"/>
+							<b:Heading size="H3" text="Members"/>
 						</bh:Div>
 						<bh:Div addStyleNames="SRC-grid-item" height="10px"/>
 						<bh:Div addStyleNames="SRC-grid-item flexcontainer-align-items-flex-end" marginTop="10" marginBottom="5" height="50px">
