--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -1581,6 +1581,9 @@ ol.lowerroman {
 	.glyphicon-arrow-right:before {
 		content: "\f061";
 	}
+	.cursor-text {
+		cursor: text;
+	}
 }
 
 .smallerText {
