--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -64,7 +64,7 @@
 						<bh:Div addStyleNames="SRC-grid-item" height="10px"/>
 						<bh:Div addStyleNames="SRC-grid-item flexcontainer-align-items-flex-end" marginTop="10" marginBottom="5" height="50px">
 							<bh:Div>
-								<b:Icon ui:field="memberSearchButton" type="SEARCH" addStyleNames="imageButton topLevelZIndex font-size-22 movedown-28 synapse-green left"/>
+								<b:Icon ui:field="memberSearchButton" type="SEARCH" addStyleNames="imageButton font-size-22 movedown-28 synapse-green left"/>
 								<b:TextBox ui:field="memberSearchTextBox" height="35px" width="100%" addStyleNames="inline-block padding-left-35" placeholder="Find team members"/>
 							</bh:Div>
 						</bh:Div>
