--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -81,12 +81,14 @@
 													<bh:Div addStyleNames="flexcontainer-column flexcontainer-column-fill-width">
 														<b:Anchor ui:field="orcIdLink" addStyleNames="movedown-3 margin-right-30" />
 													</bh:Div>
+													<bh:Div ui:field="certifiedValidatedContainer" addStyleNames="flexcontainer-column"  />
 													<bh:Div addStyleNames="flexcontainer-column">
 														<b:Button ui:field="editProfileButton" icon="EDIT" type="PRIMARY">Edit Profile</b:Button>	
 													</bh:Div>
 												</bh:Div>
 											</bh:Div>
 											<g:SimplePanel ui:field="editUserProfilePanel" />
+											
 										</div>
 									</div>
 								</div>
