--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -73,6 +73,7 @@
 									<div ui:field="profileUI" class="profileUI inline-block vertical-align-top max-width-800">
 										<div class="padding-15">
 											<g:SimplePanel ui:field="profileSynAlertPanel" />
+											<bh:Div ui:field="certifiedValidatedContainer" paddingBottom="3" marginLeft="5" />
 											<bh:Div ui:field="userBadgeContainer" />
 											<!-- View Profile Panel -->
 											<bh:Div ui:field="userBadgeFooter" addStyleNames="dropshadow2" marginLeft="2" marginRight="2" marginTop="0" paddingLeft="34" paddingRight="18" paddingTop="3" height="70px">
@@ -81,14 +82,12 @@
 													<bh:Div addStyleNames="flexcontainer-column flexcontainer-column-fill-width">
 														<b:Anchor ui:field="orcIdLink" addStyleNames="movedown-3 margin-right-30" />
 													</bh:Div>
-													<bh:Div ui:field="certifiedValidatedContainer" addStyleNames="flexcontainer-column"  />
 													<bh:Div addStyleNames="flexcontainer-column">
 														<b:Button ui:field="editProfileButton" icon="EDIT" type="PRIMARY">Edit Profile</b:Button>	
 													</bh:Div>
 												</bh:Div>
 											</bh:Div>
 											<g:SimplePanel ui:field="editUserProfilePanel" />
-											
 										</div>
 									</div>
 								</div>
