--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -26,6 +26,7 @@
 								<b:AnchorListItem icon="TIMES_CIRCLE" iconFixedWidth="true" ui:field="deleteTeamItem" visible="false" text="Delete Team" />
 								<b:AnchorListItem icon="ARROW_RIGHT" iconFixedWidth="true" ui:field="leaveTeamItem" visible="false" text="Leave Team" />
 								<b:AnchorListItem icon="FLAG" iconFixedWidth="true" ui:field="manageAccessItem" text="(ACT) Manage Access Requirements" visible="false"/> 
+								<b:AnchorListItem icon="LIST_ALT" iconFixedWidth="true" ui:field="teamProjectsItem" text="View Associated Projects" visible="false"/>
 							</b:DropDownMenu>
 						</b:DropDown>
 					</bh:Div>
