add a custom click handler to the project badge so that we can hide the modal (on click)

--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -32,9 +32,7 @@
 					</bh:Div>
 				</bh:Div>
 			</bh:Div>
-			<g:SimplePanel ui:field="teamEditPanel"/>
-			<g:SimplePanel ui:field="teamDeletePanel"/>
-			<g:SimplePanel ui:field="teamLeavePanel"/>
+			<bh:Div ui:field="widgetsContainer" />
 			<g:SimplePanel ui:field="inviteMemberPanel"/>
 
 			<g:SimplePanel ui:field="synAlertPanel"/>
