--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -25,7 +25,7 @@ $synapse-orange: #E8762B;
 $synapse-accent-primary: #17a2b8;
 
 .colored { color:$synapse-blue;}
-.link { color:$synapse-blue;}
+.link, details > summary { color:$synapse-blue;}
 .link, .link:visited, .link:hover {  color:$synapse-blue; }
 .link:hover { text-decoration: underline; cursor:pointer;}
 a {color:$synapse-blue;text-decoration:none;}
@@ -1583,6 +1583,23 @@ ol.lowerroman {
 	}
 	.cursor-text {
 		cursor: text;
+	}
+	// PORTALS-700
+	details > summary {
+		list-style: none;
+		cursor: pointer;
+		display: inline;
+		margin-left: 2px;
+		border-bottom: 1px solid transparent;
+	}
+	details > summary:hover {
+		border-bottom: 1px solid $synapse-blue;
+	}
+	details > summary::-webkit-details-marker {
+		display:none;
+	}
+	details[open] > summary {
+		display: none;
 	}
 }
 
