--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -1609,7 +1609,7 @@ ol.lowerroman {
 			visibility: hidden;
 		}
 		summary::before {
-			content: 'Show less';
+			content: 'Show Less';
 			visibility: visible;
 		}
 	}
