--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -2,15 +2,16 @@
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder" xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:s="urn:import:org.sagebionetworks.web.client.view"
 	xmlns:b="urn:import:org.gwtbootstrap3.client.ui" xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html" xmlns:t="urn:import:org.sagebionetworks.web.client.view.bootstrap.table"
 	xmlns:w="urn:import:org.sagebionetworks.web.client.widget" xmlns:tr="urn:import:org.sagebionetworks.web.client.widget.table.v2.results">
-
-	<ui:with field='sageImageBundle' type='org.sagebionetworks.web.client.SageImageBundle' />
-
+	
 	<g:HTMLPanel>
 		<div class="margin-top-10-imp"></div>
 		<g:HTMLPanel>
 			<div class="margin-10">
 				<div class="margin-top-5">
 					<div ui:field="dashboardUI" class="inline-block">
+						<b:Alert ui:field="loginAlert" type="INFO" visible="false" addStyleNames="fullWidthAlert">
+							<bh:Strong text="Please login to access this resource." />
+						</b:Alert>
 						<div>
 							<div ui:field="navtabContainer">
 								<ul class="nav nav-tabs entity-tabs margin-top-15 border-none">
