SWC-4993: add alignment parameter to Button widget

--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -1644,7 +1644,7 @@ ol.lowerroman {
 	overflow-y: hidden;
 }
 
-.align-center {display: block; margin-left: auto; margin-right: auto;}
+#rootPanel .align-center {display: block; margin-left: auto; margin-right: auto;}
 #rootPanel .text-align-center { text-align: center;}
 
 .bottomright {
