--- a/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
@@ -99,7 +99,7 @@
 						   all from the comfort of your own code."/>
 						<bh:Paragraph>
 							<bh:Text>Don't see your language of choice here? Check out our full</bh:Text>
-							<b:Anchor href="https://api-docs.synapse.org/rest/" text="REST API documentation" target="_blank" addStyleNames="margin-left-5"/>
+							<b:Anchor href="http://docs.synapse.org/rest/" text="REST API documentation" target="_blank" addStyleNames="margin-left-5"/>
 						</bh:Paragraph>
 						<b:Row>
 							<b:Column size="SM_3">
@@ -111,7 +111,7 @@
 											</t:TableData>
 											<t:TableData>
 												<b:Heading size="H5" addStyleNames="font-weight-bolder">
-													<b:Anchor href="https://r-docs.synapse.org/" target="_blank" text="R client"/>
+													<b:Anchor href="http://docs.synapse.org/r/" target="_blank" text="R client"/>
 												</b:Heading>
 											</t:TableData>
 										</t:TableRow>
@@ -127,7 +127,7 @@
 											</t:TableData>
 											<t:TableData>
 												<b:Heading size="H5" addStyleNames="font-weight-bolder">
-													<b:Anchor href="https://python-docs.synapse.org/build/html/" target="_blank" text="Python client"/>
+													<b:Anchor href="http://docs.synapse.org/python/" target="_blank" text="Python client"/>
 												</b:Heading>
 											</t:TableData>
 										</t:TableRow>
@@ -143,7 +143,7 @@
 											</t:TableData>
 											<t:TableData>
 												<b:Heading size="H5" addStyleNames="font-weight-bolder">
-													<b:Anchor href="https://python-docs.synapse.org/build/html/CommandLineClient.html" target="_blank" text="Command line client"/>												
+													<b:Anchor href="http://docs.synapse.org/python/build/html/CommandLineClient.html" target="_blank" text="Command line client"/>												
 												</b:Heading>
 											</t:TableData>
 										</t:TableRow>
@@ -293,11 +293,11 @@
 									<b:Heading size="H4" addStyleNames="font-weight-bolder" text="Access your data anywhere"></b:Heading>
 									<bh:Paragraph>
 										<bh:Text>Synapse provides APIs to store or access your data from the web or programmatically via one of our supported analytical clients (</bh:Text>
-										<b:Anchor target="_blank" href="https://r-docs.synapse.org/" text="R"/>
+										<b:Anchor target="_blank" href="http://docs.synapse.org/r/" text="R"/>
 										<bh:Text>,&nbsp;</bh:Text>
-										<b:Anchor target="_blank" href="https://python-docs.synapse.org/build/html/" text="Python"/>
+										<b:Anchor target="_blank" href="http://docs.synapse.org/python/" text="Python"/>
 										<bh:Text>,&nbsp;</bh:Text>
-										<b:Anchor target="_blank" href="https://python-docs.synapse.org/build/html/CommandLineClient.html" text="command line"/>
+										<b:Anchor target="_blank" href="http://docs.synapse.org/python/build/html/CommandLineClient.html" text="command line"/>
 										<bh:Text>)</bh:Text>
 									</bh:Paragraph>
 								</t:TableData>
